<resources>
    <string name="app_name">A01d</string>
    <string name="app_name2">AirA01a</string>
    <string name="blank"> </string>
    <string name="configuration">Settings</string>
    <string name="restore">Restore</string>
    <string name="icon">icon</string>
    <string name="button">Button</string>
    <string name="imageview">Image View</string>
    <string name="dialog_positive_execute">OK</string>
    <string name="dialog_negative_cancel">Cancel</string>
    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_message_restore_camera_property">Restore Camera Property</string>
    <string name="dialog_title_loading_properties">Loading Camera Properties</string>
    <string name="dialog_message_loading_properties">Please wait&#8230;</string>
    <string name="pref_cat_camera">Camera</string>
    <string name="pref_take_mode">Take Mode</string>
    <string name="pref_camera_sound_volume">Shutter Sound</string>
    <string name="pref_take_raw">Take Raw</string>
    <string name="pref_capture_both_camera_and_live_view">Capture LiveView Image</string>
    <string name="pref_summary_capture_both_live_view">Captutes a liveview image.</string>
    <string name="pref_cat_application_control">App. Control</string>
    <string name="pref_exit_power_off">Exit Application(and Camera OFF)</string>
    <string name="pref_exit_power_off_sony">Exit Application</string>
    <string name="pref_exit_power_off_panasonic">Exit Application</string>
    <string name="pref_exit_power_off_olympuspen">Exit Application(and Camera OFF)</string>
    <string name="pref_exit_power_off_canon">Exit Application</string>
    <string name="pref_exit_power_off_nikon">Exit Application</string>
    <string name="pref_exit_power_off_theta">Exit Application</string>
    <string name="pref_exit_power_off_fujix">Exit Application</string>
    <string name="pref_fujix_display_camera_view">Use Camera Display</string>
    <string name="pref_fujix_display_camera_view_summary">EXPERIMENTAL: Shows liveview screen both camera and smartphone.</string>
    <string name="pref_fujix_focus_xy">Number of Focus Point X,Y (default: 7,7)</string>
    <string name="pref_summary_fujix_focus_xy"> </string>
    <string name="pref_canon_focus_xy">Number of Focus Point X,Y (default: 6000,4000)</string>
    <string name="pref_summary_canon_focus_xy"> </string>
    <string name="pref_nikon_focus_xy">Number of Focus Point X,Y (default: 6000,4000)</string>
    <string name="pref_summary_nikon_focus_xy"> </string>
    <string name="pref_fujix_liveview_wait">Liveview receive wait (default: 80)</string>
    <string name="pref_summary_fujix_liveview_wait"> </string>
    <string name="pref_fujix_command_polling_wait">Status polling wait (default: 500)</string>
    <string name="pref_summary_fujix_command_polling_wait"> </string>
    <string name="pref_fujix_connection_for_read">Connect for transfer connection mode.</string>
    <string name="pref_fujix_connection_for_read_summary">Test: for picture transfer connection.</string>
    <string name="pref_cat_initialize">App. Startup</string>
    <string name="pref_auto_connect_camera">Auto Connect To Camera</string>
    <string name="pref_summary_auto_connect_camera">Normally to keep ON.</string>
    <string name="dialog_message_power_off">Power Off</string>
    <string name="dialog_message_exit_application">Exit Application</string>
    <string name="pref_bluetooth_power_on">BLE Power On</string>
    <string name="pref_summary_bluetooth_power_on">Camera Power on via BLE</string>
    <string name="pref_cat_live_view">Live View Settings</string>
    <string name="pref_live_view_quality">Live View Quality</string>
    <string name="pref_digital_zoom_level">Digital Zoom Level</string>
    <string name="pref_power_zoom_level">Power Zoom Level(PZ Lens Only)</string>
    <string name="pref_magnifying_live_view_scale">Magnifying Live View Scale</string>
    <string name="pref_cat_info">Information</string>
    <string name="pref_focal_length">Focal Length</string>
    <string name="pref_lens_status">Lens Status</string>
    <string name="pref_media_status">SD Card Status</string>
    <string name="pref_camera_version">Camera Version</string>
    <string name="pref_camerakit_version">Camera kit Version</string>
    <string name="pref_cat_others">Other</string>
    <string name="pref_special_thanks">Special Thanks to</string>
    <string name="pref_cat_gokigen">GOKIGEN</string>
    <string name="pref_instruction_manual">A01d Instructions</string>
    <string name="pref_privacy_policy">Privacy Policy</string>
    <string name="pref_wifi_settings">WIFI Settings</string>
    <string name="pref_summary_wifi_settings"> </string>
    <string name="information"> </string>
    <string name="favorite">Favorite</string>
    <string name="preferences">Preferences</string>
    <string name="grid">Grid</string>
    <string name="network_connection_timeout">Connection time out</string>
    <string name="dialog_title_connect_failed_ricoh">Connect failed (RICOH)</string>
    <string name="dialog_title_connect_failed_opc">Connect failed (OPC)</string>
    <string name="dialog_title_connect_failed_olympus">Connect failed (Olympus)</string>
    <string name="dialog_title_connect_failed_panasonic">Connect failed (PANASONIC)</string>
    <string name="dialog_title_connect_failed_sony">Connect failed (SONY)</string>
    <string name="dialog_title_connect_failed_fuji">Connect failed (FUJI)</string>
    <string name="dialog_title_connect_failed_theta">Connect failed (THETA)</string>
    <string name="dialog_title_connect_failed_nikon">Connect failed (NIKON)</string>
    <string name="dialog_title_connect_failed_canon">Connect failed (CANON)</string>
    <string name="dialog_title_connect_failed_kodak">Connect failed (PIXPRO)</string>
    <string name="dialog_title_button_retry">Retry</string>
    <string name="dialog_title_button_network_settings">WiFi Settings</string>
    <string name="data_saving">Saving&#8230;</string>
    <string name="save_image_failure">Save image is failed.</string>
    <string name="camera_status_title">Camera Status</string>
    <string name="update_status">Update</string>
    <string name="live_view_scale_default">LV : </string>
    <string name="focal_length_with_digital_zoom_view_default"> </string>
    <string name="save_props">Save</string>
    <string name="hint_save_props">Label</string>
    <string name="saved_my_props">Saved Property : </string>
    <string name="auto_save_props">(Auto Save)</string>
    <string name="title_tab_title_load">Load</string>
    <string name="title_tab_title_save">Save</string>
    <string name="title_my_settings">Favorite Camera Properties</string>
    <string name="hint_save_bt_name">Name</string>
    <string name="hint_save_bt_passcode">Passcode</string>
    <string name="pref_air_bt">Olympus Air Settings</string>
    <string name="pref_summary_air_bt">Entry your Olympus Air</string>
    <string name="saved_my_camera">Registerd : </string>
    <string name="pref_degug_info">Debug Information</string>
    <string name="pref_summary_debug_info">LogCat Information</string>
    <string name="connect_start">start</string>
    <string name="connect_check_wifi">check WIFI</string>
    <string name="connect_connect">connecting</string>
    <string name="connect_connecting">connecting&#8230;</string>
    <string name="connect_connected">connected</string>
    <string name="connect_change_run_mode">changeRunMode</string>
    <string name="connect_restore_camera_settings">restoreCameraSettings</string>
    <string name="connect_receive_unknown_message">RECEIVED UNKNOWN ID MESSAGE</string>
    <string name="fatal_cannot_use_camera">The CameraKit SDK can not work because the running mode of camera is UNKNOWN.   So please long press the power button of camera more than 8 seconds. (This is the camera reset operation.) After that turn on the camera power again.</string>
    <string name="camera_reset_required">The camera reset operation is required.</string>
    <string name="camera_disconnected">Disconnected</string>
    <string name="dialog_start_save_property_message">Please Wait</string>
    <string name="dialog_start_save_property_title">Storing Properties&#8230;</string>
    <string name="dialog_start_load_property_message">Please Wait</string>
    <string name="dialog_start_load_property_title">Setting Properties&#8230;</string>
    <string name="restored_my_props">Restored Property : </string>
    <string name="launch_fail_via_ble">  Launch fail. via BLE : </string>
    <string name="ble_setting_is_off">Bluetooth is currently off.</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="pref_connection_method">Connection Method</string>
    <string name="pref_canon_zoom_magnification">Zoom magnification</string>
    <string name="pref_summary_canon_zoom_magnification">set zoom magnification (0 : no zoom)</string>
    <string name="pref_canon_zoom_resolution">Zoom Step</string>
    <string name="pref_summary_canon_zoom_resolution"> </string>
    <string name="pref_cat_detail_settings">Detail Settings</string>
    <string name="pref_opc_settings">OPC (Olympus Air)</string>
    <string name="pref_summary_opc_settings">Special Settings for OPC</string>
    <string name="pref_olympus_settings">Olympus PEN/OM-D</string>
    <string name="pref_summary_olympus_settings">Special Settings for PEN/OM-D</string>
    <string name="pref_sony_settings">Sony</string>
    <string name="pref_summary_sony_settings">Special Settings for Sony</string>
    <string name="pref_ricoh_settings">Ricoh GR / PENTAX</string>
    <string name="pref_summary_ricoh_settings">Special Settings for Ricoh GR/PENTAX</string>
    <string name="pref_theta_settings">Theta</string>
    <string name="pref_summary_theta_settings">Special Settings for Ricoh THETA</string>
    <string name="pref_fuji_x_settings">Fuji X Series</string>
    <string name="pref_summary_fuji_x_settings">Special Settings for Fujifilm X Series</string>
    <string name="pref_panasonic_settings">Panasonic</string>
    <string name="pref_summary_panasonic_settings">Special Settings for Panasonic</string>
    <string name="pref_canon_settings">Canon</string>
    <string name="pref_summary_canon_settings">Special Settings for Canon</string>
    <string name="pref_nikon_settings">Nikon</string>
    <string name="pref_summary_nikon_settings">Special Settings for Nikon</string>
    <string name="pref_kodak_settings">KODAK PIXPRO WPZ2</string>
    <string name="pref_summary_kodak_settings">Special Settings for PIXPRO WPZ2</string>
    <string name="pref_exit_power_off_summary">Exit Application</string>
    <string name="pref_cache_liveview_pictures">Delay liveview picture</string>
    <string name="pref_summary_cache_liveview_pictures">This switch effects after restart. </string>
    <string name="pref_number_of_cache_pictures">Max number of cache pictures</string>
    <string name="pref_summary_number_of_cache_pictures">Set number of cache pictures. (Default:500, enables after restart.)</string>
    <string name="pref_capture_only_live_view">DO NOT USE REMOTE SHUTTER</string>
    <string name="pref_summary_capture_only_live_view"> </string>
    <string name="pref_open_send_command_dialog">SEND COMMAND DIALOG</string>
    <string name="pref_kodak_flash_mode">Flash Mode</string>
    <string name="pref_summary_kodak_flash_mode">Currently, sets only when connecting to camera.</string>
    <string name="pref_kodak_host_ip">Camera IP Address</string>
    <string name="pref_summary_kodak_host_ip">default: 172.16.0.254 </string>
    <string name="pref_kodak_control_port">Camera Command Port</string>
    <string name="pref_summary_kodak_control_port">default: 9175 </string>
    <string name="pref_kodak_liveview_port">Camera Liveview Port</string>
    <string name="pref_summary_kodak_liveview_port">default: 9176 </string>
</resources>