<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/pref_cat_application_control">

        <PreferenceScreen
            android:key="exit_application"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/pref_exit_power_off_summary" />

        <ListPreference
            android:title="@string/pref_connection_method"
            android:entryValues="@array/connection_method_value"
            android:entries="@array/connection_method"
            android:key="connection_method"
            android:defaultValue="OPC"/>

        <PreferenceScreen
            android:key="wifi_settings"
            android:title="@string/pref_wifi_settings"
            android:summary="@string/pref_summary_wifi_settings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_camera">

        <CheckBoxPreference
            android:key="capture_both_camera_and_live_view"
            android:title="@string/pref_capture_both_camera_and_live_view"
            android:summary="@string/pref_summary_capture_both_live_view"/>

        <CheckBoxPreference
            android:key="capture_only_live_view"
            android:title="@string/pref_capture_only_live_view"
            android:summary="@string/pref_summary_capture_only_live_view" />

        <CheckBoxPreference
            android:key="cache_liveview_pictures"
            android:title="@string/pref_cache_liveview_pictures"
            android:summary="@string/pref_summary_cache_liveview_pictures" />

        <EditTextPreference
            android:key="number_of_cache_pictures"
            android:title="@string/pref_number_of_cache_pictures"
            android:defaultValue="500"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            android:summary="@string/pref_summary_number_of_cache_pictures" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_initialize">

        <CheckBoxPreference
            android:key="auto_connect_to_camera"
            android:title="@string/pref_auto_connect_camera"
            android:summary="@string/pref_summary_auto_connect_camera" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_detail_settings">

        <PreferenceScreen
            android:key="opc_settings"
            android:title="@string/pref_opc_settings"
            android:summary="@string/pref_summary_opc_settings" />

        <PreferenceScreen
            android:key="olympus_settings"
            android:title="@string/pref_olympus_settings"
            android:summary="@string/pref_summary_olympus_settings" />

        <PreferenceScreen
            android:key="ricoh_settings"
            android:title="@string/pref_ricoh_settings"
            android:summary="@string/pref_summary_ricoh_settings" />

        <PreferenceScreen
            android:key="theta_settings"
            android:title="@string/pref_theta_settings"
            android:summary="@string/pref_summary_theta_settings" />

        <PreferenceScreen
            android:key="fuji_x_settings"
            android:title="@string/pref_fuji_x_settings"
            android:summary="@string/pref_summary_fuji_x_settings" />

        <PreferenceScreen
            android:key="panasonic_settings"
            android:title="@string/pref_panasonic_settings"
            android:summary="@string/pref_summary_panasonic_settings" />

        <PreferenceScreen
            android:key="kodak_settings"
            android:title="@string/pref_kodak_settings" />
            android:summary="@string/pref_summary_kodak_settings" />

        <PreferenceScreen
            android:key="sony_settings"
            android:title="@string/pref_sony_settings"
            android:summary="@string/pref_summary_sony_settings" />

        <PreferenceScreen
            android:key="canon_settings"
            android:title="@string/pref_canon_settings"
            android:summary="@string/pref_summary_canon_settings" />

        <PreferenceScreen
            android:key="nikon_settings"
            android:title="@string/pref_nikon_settings"
            android:summary="@string/pref_summary_nikon_settings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_gokigen">

        <Preference
            android:key="instruction_link"
            android:title="@string/pref_instruction_manual"
            android:summary="https://osdn.net/projects/gokigen/wiki/A01d"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://osdn.net/projects/gokigen/wiki/A01d" />
        </Preference>

        <Preference
            android:key="privacy_policy"
            android:title="@string/pref_privacy_policy"
            android:summary="https://osdn.net/projects/gokigen/wiki/PrivacyPolicy"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://osdn.net/projects/gokigen/wiki/PrivacyPolicy" />
        </Preference>

        <PreferenceScreen
            android:key="debug_info"
            android:title="@string/pref_degug_info"
            android:summary="@string/pref_summary_debug_info" />

    </PreferenceCategory>
</PreferenceScreen>
