<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/pref_cat_application_control">

        <PreferenceScreen
            android:key="exit_application"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/pref_exit_power_off_panasonic" />
<!--
        <ListPreference
            android:title="@string/pref_connection_method"
            android:entryValues="@array/connection_method_value"
            android:entries="@array/connection_method"
            android:key="connection_method"
            android:defaultValue="OPC"/>

        <PreferenceScreen
            android:key="wifi_settings"
            android:title="@string/pref_wifi_settings"
            android:summary="@string/pref_summary_wifi_settings" />
-->
<!--
        <PreferenceScreen
            android:key="dialog_message_send"
            android:icon="@drawable/ic_linked_camera_black_24dp"
            android:title="@string/pref_open_send_command_dialog"
            />
-->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_camera">

        <ListPreference
            android:key="kodak_flash_mode"
            android:title="@string/pref_kodak_flash_mode"
            android:summary="@string/pref_summary_kodak_flash_mode"
            android:entryValues="@array/kodak_flash_mode_value"
            android:entries="@array/kodak_flash_mode"
            android:defaultValue="OFF"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_initialize">


        <EditTextPreference
            android:key="kodak_host_ip"
            android:title="@string/pref_kodak_host_ip"
            android:defaultValue="172.16.0.254"
            android:summary="@string/pref_summary_kodak_host_ip" />

        <EditTextPreference
            android:key="kodak_command_port"
            android:title="@string/pref_kodak_control_port"
            android:defaultValue="9175"
            android:summary="@string/pref_summary_kodak_control_port" />

        <EditTextPreference
            android:key="kodak_liveview_port"
            android:title="@string/pref_kodak_liveview_port"
            android:defaultValue="9176"
            android:summary="@string/pref_summary_kodak_liveview_port" />
    </PreferenceCategory>

<!--
    <PreferenceCategory
        android:title="@string/pref_cat_gokigen">

        <Preference
            android:key="instruction_link"
            android:title="@string/pref_instruction_manual"
            android:summary="https://osdn.net/projects/gokigen/wiki/A01d"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://osdn.net/projects/gokigen/wiki/A01d" />
        </Preference>

        <Preference
            android:key="privacy_policy"
            android:title="@string/pref_privacy_policy"
            android:summary="https://osdn.net/projects/gokigen/wiki/PrivacyPolicy"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://osdn.net/projects/gokigen/wiki/PrivacyPolicy" />
        </Preference>

        <PreferenceScreen
            android:key="debug_info"
            android:title="@string/pref_degug_info"
            android:summary="@string/pref_summary_debug_info" />

    </PreferenceCategory>
-->
</PreferenceScreen>
