<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/pref_cat_application_control">

        <PreferenceScreen
            android:key="exit_application"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/pref_exit_power_off_canon" />
<!--
        <ListPreference
            android:title="@string/pref_connection_method"
            android:entryValues="@array/connection_method_value"
            android:entries="@array/connection_method"
            android:key="connection_method"
            android:defaultValue="OPC"/>

        <PreferenceScreen
            android:key="wifi_settings"
            android:title="@string/pref_wifi_settings"
            android:summary="@string/pref_summary_wifi_settings" />
-->
        <PreferenceScreen
            android:key="dialog_message_send"
            android:icon="@drawable/ic_linked_camera_black_24dp"
            android:title="@string/pref_open_send_command_dialog"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_camera">

        <EditTextPreference
            android:key="canon_zoom_magnification"
            android:title="@string/pref_canon_zoom_magnification"
            android:defaultValue="0"
            android:summary="@string/pref_summary_canon_zoom_magnification" />

        <EditTextPreference
            android:key="canon_zoom_resolution"
            android:title="@string/pref_canon_zoom_resolution"
            android:defaultValue="25"
            android:summary="@string/pref_summary_canon_zoom_resolution" />

        <EditTextPreference
            android:key="canon_focus_xy"
            android:title="@string/pref_canon_focus_xy"
            android:defaultValue="6000,4000"
            android:summary="@string/pref_summary_canon_focus_xy" />
<!--
        <CheckBoxPreference
            android:key="capture_both_camera_and_live_view"
            android:title="@string/pref_capture_both_camera_and_live_view" />
-->
    </PreferenceCategory>
<!--
    <PreferenceCategory
        android:title="@string/pref_cat_initialize">

        <CheckBoxPreference
        android:key="auto_connect_to_camera"
        android:title="@string/pref_auto_connect_camera"
        android:summary="@string/pref_summary_auto_connect_camera" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_gokigen">

        <Preference
            android:key="instruction_link"
            android:title="@string/pref_instruction_manual"
            android:summary="https://osdn.net/projects/gokigen/wiki/A01d"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://osdn.net/projects/gokigen/wiki/A01d" />
        </Preference>

        <Preference
            android:key="privacy_policy"
            android:title="@string/pref_privacy_policy"
            android:summary="https://osdn.net/projects/gokigen/wiki/PrivacyPolicy"
            android:selectable="true">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://osdn.net/projects/gokigen/wiki/PrivacyPolicy" />
        </Preference>

        <PreferenceScreen
            android:key="debug_info"
            android:title="@string/pref_degug_info"
            android:summary="@string/pref_summary_debug_info" />

    </PreferenceCategory>
-->
</PreferenceScreen>
