<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <view
        android:id="@+id/cameraLiveImageView"
        class="net.osdn.gokigen.a01d.liveview.CameraLiveImageView"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/consolePanelLayout"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/background_translucent_dark"
        android:orientation="horizontal">

        <view
            android:id="@+id/consoleImageView1"
            class="net.osdn.gokigen.a01d.liveview.ScalableImageViewPanel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true"
            android:contentDescription="@string/favorite"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:visibility="visible" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/operationPanelLayout"
        android:layout_width="fill_parent"
        android:layout_height="24pt"
        android:background="@color/background_translucent_dark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/focusing_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:contentDescription="@string/button"
            android:src="@drawable/btn_manual_focus"
            android:visibility="visible"
            android:layout_marginLeft="2pt"
            android:layout_marginStart="2pt"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <ImageButton
            android:id="@+id/shutter_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:contentDescription="@string/button"
            android:src="@drawable/ic_camera_black_24dp"
            android:visibility="visible"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/informationPanelLayout"
        android:layout_width="fill_parent"
        android:layout_height="14pt"
        android:background="@color/background_translucent_dark"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/show_preference_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/preferences"
            android:src="@drawable/ic_settings_black_24dp"
            android:visibility="visible" />



        <ImageButton
            android:id="@+id/connect_disconnect_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/grid"
            android:src="@drawable/ic_cloud_off_black_24dp"
            android:visibility="visible" />


        <TextView
            android:id="@+id/informationMessageTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/connect_disconnect_button"
            android:layout_toEndOf="@id/connect_disconnect_button"
            android:clickable="true"
            android:gravity="start"
            android:text="@string/information"
            android:textColor="@color/background_translucent_dark"
            android:textSize="9pt" />

        <ImageButton
            android:id="@+id/camera_property_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:layout_alignTop="@id/show_preference_button"
            android:layout_toLeftOf="@id/show_preference_button"
            android:layout_toStartOf="@id/show_preference_button"
            android:contentDescription="@string/blank"
            android:src="@drawable/ic_build_black_24dp"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/show_hide_grid_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center"
            android:scaleType="fitCenter"
            android:layout_alignTop="@id/show_preference_button"
            android:layout_toLeftOf="@id/camera_property_settings_button"
            android:layout_toStartOf="@id/camera_property_settings_button"
            android:contentDescription="@string/grid"
            android:src="@drawable/ic_grid_on_black_24dp"
            android:visibility="visible" />
    </RelativeLayout>
</LinearLayout>
